// apps/api/libs/proto/src/proto/notification.proto
syntax = "proto3";

package api.notification;

service NotificationService {
  rpc SendNotification (SendNotificationRequest) returns (SendNotificationResponse);
  rpc GetUserNotifications (GetUserNotificationsRequest) returns (GetUserNotificationsResponse);
  rpc MarkNotificationAsRead (MarkNotificationAsReadRequest) returns (MarkNotificationAsReadResponse);
}

message SendNotificationRequest {
  string user_id = 1;
  string title = 2;
  string message = 3;
  string type = 4; // e.g., BOOKING_APPROVED, ITEM_DUE, ITEM_RETURNED
  string metadata = 5; // optional json string
}

message SendNotificationResponse {
  bool success = 1;
}

message GetUserNotificationsRequest {
  string user_id = 1;
}

message GetUserNotificationsResponse {
  repeated Notification notifications = 1;
}

message MarkNotificationAsReadRequest {
  string notification_id = 1;
}

message MarkNotificationAsReadResponse {
  bool success = 1;
}

message Notification {
  string id = 1;
  string title = 2;
  string message = 3;
  string type = 4;
  bool read = 5;
  string created_at = 6;
}